--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nfl"
 version = "0.1.0"
 edition = "2021"
-author = "Tom R. <ltratcliff@gmail.com>"
+authors = ["Tom R. <ltratcliff@gmail.com>"]
 description = "NFL schedule in your terminal"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
